# garminview

./: .env.example  .gitignore  1.tape  CLAUDE.md  README.md  TODO.md  btop.tape  cassette.tape  demo.tape  docker-compose.override.yml  docker-compose.yml  garmindb_run.txt
backend/: .dockerignore  .env  Dockerfile  entrypoint.sh  garminview.db  prep.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_add_actalog_tables.py  0004_add_parser_timing_columns_to_actalog_.py  0005_align_column_names.py  0006_daily_hr_zones.py  0007_add_source_to_weight_body_composition.py  0008_polar_staging_tables.py  0009_add_source_to_sleep_rhr_vo2max.py  0010_actalog_garmin_activity_link.py  0c196bca2dc0_initial_schema.py  f0086a8c2b7d_add_actalog_notes_parser_tables_and_.py
backend/garminview/analysis/: athlete_metrics.py  energy_balance.py  engine.py  hr_zones.py  max_hr_aging.py
backend/garminview/api/: deps.py  main.py
backend/garminview/core/: config.py  database.py  logging.py  startup.py
backend/garminview/export/: pdf_generator.py
backend/garminview/ingestion/: actalog_activity_match.py  actalog_client.py  actalog_sync.py  actalog_writeback.py  base.py  mfp_backfill.py  mfp_zip_parser.py  notes_parser.py  orchestrator.py  parser_system_prompt.md  polar_backfill.py  rate_limiter.py  sync_logger.py
backend/garminview/models/: __init__.py  (+11 more)
backend/notebooks/: activity_explorer.py  correlation_explorer.py  health_explorer.py  training_load.py
backend/scripts/: migrate_to_mariadb.py
backend/tests/: conftest.py  test_core.py  test_models.py
(+211 files in other folders)
