[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garminview"
version = "0.5.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "fitparse>=1.2.0",
    "garminconnect>=0.2.19",
    "tenacity>=8.2.0",
    "apscheduler>=3.10.0",
    "structlog>=24.1.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "weasyprint>=61.0",
    "jinja2>=3.1.0",
    "pyecharts>=2.0.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
